--- a/churn_prediction_ybi dataset_final.ipynb
+++ b/churn_prediction_ybi dataset_final.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 📊 Churn Prediction for ConnectSphere Telecom\n",
+    "#  Churn Prediction for ConnectSphere Telecom\n",
     "\n",
     "This notebook uses a telecom dataset from YBI Foundation to build a customer churn prediction model using an Artificial Neural Network (ANN)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Import Libraries"
    ]
   },
   {
@@ -15,7 +22,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Import Libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,15 +34,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 2. Load Dataset from YBI Foundation\n",
-    "url = 'https://raw.githubusercontent.com/YBIFoundation/Dataset/refs/heads/main/TelecomCustomerChurn.csv'\n",
-    "df = pd.read_csv(url)\n",
-    "df.head()"
+    "# 2. Load Dataset from YBI Foundation"
    ]
   },
   {
@@ -45,7 +46,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Preprocessing\n",
+    "url = 'https://raw.githubusercontent.com/YBIFoundation/Dataset/refs/heads/main/TelecomCustomerChurn.csv'\n",
+    "df = pd.read_csv(url)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df.replace({'No internet service':'No', 'No phone service':'No'}, inplace=True)\n",
     "df.drop(['customerID'], axis=1, inplace=True)\n",
     "df['TotalCharges'] = pd.to_numeric(df['TotalCharges'], errors='coerce')\n",
@@ -62,12 +80,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Build and Train ANN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. Build and Train ANN\n",
     "model = Sequential()\n",
     "model.add(Dense(32, activation='relu', input_dim=X_train.shape[1]))\n",
     "model.add(Dense(16, activation='relu'))\n",
@@ -77,12 +101,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Evaluate the Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5. Evaluate the Model\n",
     "loss, accuracy = model.evaluate(X_test, y_test)\n",
     "print(f\"Test Accuracy: {accuracy:.4f}\")\n",
     "\n",
@@ -94,12 +124,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Plot Training Accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6. Plot Training Accuracy\n",
     "plt.plot(history.history['accuracy'], label='Train Accuracy')\n",
     "plt.plot(history.history['val_accuracy'], label='Validation Accuracy')\n",
     "plt.xlabel('Epoch')\n",
